# eq_sat

./: Cargo.toml  Dockerfile  assumptions.md  simple_if.bc
.cargo/: config.toml
documents/: egg_summary.md  notes_2023-05-30.md  todo.md
llvm_programs/add/: add.bc  add.c  add.ll
llvm_programs/complex_ifs/: complex_ifs.bc  complex_ifs.c  complex_ifs.ll
llvm_programs/double_loop/: double_loop.c  double_loop.ll  double_loop_g.ll
llvm_programs/identity/: identity.bc  identity.c  identity.ll  identity_noalloc.bc  identity_noalloc.ll
llvm_programs/if/: if.bc  if.c  if.ll  llvm16.ll
llvm_programs/nested_loop/: a.out  nested_loop.bc  nested_loop.c  nested_loop.ll  runner.c
llvm_programs/print/: print.bc  print.c  print.ll
llvm_programs/ret1/: ret1.bc  ret1.c  ret1.ll
llvm_programs/triple_if/: triple_if.bc  triple_if.c  triple_if.ll
llvm_programs/while_add_hand/: a.out  driver.c  while_add_hand.bc  while_add_hand.ll
llvm_programs/while_loop/: while_loop.bc  while_loop.c  while_loop.ll
src/: cost_fn.rs  interp.rs  lang.rs  lib.rs  rules.rs
src/conv/: cfg.rs  loops.rs  mod.rs  to_epeg.rs  to_llvm.rs
src/lib/: analysis.rs  llvm_conv.rs  mod.rs  rules.rs
test_data/llvm_parser/: identity.bc  identity.c  nested_ifs.c  nested_ifs.ll  phi.c  simple_if.c  simple_if.ll  unsigned_identity.bc  unsigned_identity.c
tests/: to_epeg_tests.rs
tests/llvm_parser/: constant.c  identity.ll  nested_ifs.bc  phi.ll  simple_ifO3.ll  simple_while.c  simple_while.ll  simple_whileO3.ll  unsigned_identity.ll
