[package]
name = "eq_sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.9.5"
llvm-ir = { version = "0.9.0", features = ["llvm-15"] }
llvm-ir-analysis = { git = "https://github.com/cdisselkoen/llvm-ir-analysis.git", features = ["llvm-15"] }

[[bin]]
name = "test"
test = false

[[bin]]
name = "llvm"
test = false

[lib]
name = "lang"
path = "src/lib.rs"

[dev-dependencies]
rstest = "0.18.2"
